--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $(window).load(function() {
          <a href="#"><img src="logo/googleplus.jpg" alt=google plus"/></a>
          <a href="#"><img src="logo/linkedin-logo-hd-png-3.png" alt="Linkedin"/></a>
          <a href="#"><img src="logo/tw.jpg" alt="twiter"/></a>
-         <a href="#"><img src="logo/fb.jpg" alt="facebook"/></a>
+         <a href="https://www.facebook.com/nur.tusar"><img src="logo/fb.jpg" alt="facebook"/></a>
 		
       </div>
 </div>	  
